--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-clean-json": "file:C:\\Users\\A4F7~1\\AppData\\Local\\Temp\\npm-3356-ae20305a\\git-cache-3536f9b21df4\\1124e7b203d570eb214b496019d257774163468e"
+    "gulp-clean": "^0.3.1"
   }
 }
